@@ -5,11 +5,12 @@ import io.vertx.core.VertxOptions;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.http.*;
 import io.vertx.core.http.impl.CleanableHttpClient;
+import io.vertx.core.http.impl.HttpClientBuilderInternal;
 import io.vertx.core.http.impl.HttpClientImpl;
-import io.vertx.core.http.impl.HttpClientInternal;
+import io.vertx.core.internal.http.HttpClientInternal;
 import io.vertx.core.net.endpoint.LoadBalancer;
 import io.vertx.core.net.*;
-import io.vertx.core.net.endpoint.EndpointNode;
+import io.vertx.core.net.endpoint.ServerEndpoint;
 import io.vertx.core.spi.endpoint.EndpointBuilder;
 import io.vertx.test.core.VertxTestBase;
 import io.vertx.test.fakeloadbalancer.FakeLoadBalancer;
@@ -22,6 +23,7 @@ import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
 
+import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
@@ -80,7 +82,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     waitFor(numServers * 2);
     startServers(numServers);
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost"), SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost")));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .withAddressResolver(resolver)
@@ -106,8 +108,8 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     int numServers = 4;
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
     startServers(numServers);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
-    resolver.registerAddress("example.com", Arrays.asList(
+    FakeAddressResolver resolver = new FakeAddressResolver();
+    FakeRegistration registration = resolver.registerAddress("example.com", Arrays.asList(
       SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost"),
       SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost"),
       SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 2, "localhost"),
@@ -127,7 +129,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
       }));
     }
     awaitLatch(latch);
-    List<FakeEndpoint> endpoints = resolver.endpoints("example.com");
+    List<FakeServerEndpoint> endpoints = registration.endpoints();
     for (int i = 0;i < servers.size();i++) {
       int expected = endpoints.size() - 1;
       awaitFuture(servers.get(i).close());
@@ -140,7 +142,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
   public void testResolveToSameSocketAddress() throws Exception {
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
     startServers(1);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     SocketAddress address = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
     resolver.registerAddress("server1.com", List.of(address));
     resolver.registerAddress("server2.com", List.of(address));
@@ -162,6 +164,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     awaitFuture(servers.get(0).close());
   }
 
+  @Ignore("Not supported")
   @Test
   public void testResolveToSameSocketAddressWithProxy() throws Exception {
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
@@ -170,7 +173,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     HttpProxy proxy = new HttpProxy();
     proxy.start(vertx);
 
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost")));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .withAddressResolver(resolver)
@@ -194,11 +197,13 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     assertNotNull(proxy.lastLocalAddress());
   }
 
+  @Ignore("Not supported")
   @Test
   public void testAcceptProxyFilter() throws Exception {
     testFilter(true);
   }
 
+  @Ignore("Not supported")
   @Test
   public void testRejectProxyFilter() throws Exception {
     testFilter(false);
@@ -217,7 +222,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
         assertEquals(proxied, proxy.localAddresses().contains(remote.host() + ":" + remote.port()));
         req.response().end("server-" + idx);
       };
-      FakeEndpointResolver resolver = new FakeEndpointResolver();
+      FakeAddressResolver resolver = new FakeAddressResolver();
       resolver.registerAddress("example.com", Arrays.asList(
         SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "s1.example.com"),
         SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "s2.example.com")));
@@ -250,7 +255,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
   @Test
   public void testResolveFailure() {
     Exception cause = new Exception("Not found");
-    FakeEndpointResolver lookup = new FakeEndpointResolver() {
+    FakeAddressResolver lookup = new FakeAddressResolver() {
       @Override
       public Future<FakeState> resolve(FakeAddress address, EndpointBuilder builder) {
         return Future.failedFuture(cause);
@@ -272,7 +277,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
 
   @Test
   public void testUseInvalidAddress() {
-    FakeEndpointResolver lookup = new FakeEndpointResolver();
+    FakeAddressResolver lookup = new FakeAddressResolver();
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .withAddressResolver(lookup)
       .build();
@@ -293,7 +298,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     startServers(1);
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
     CountDownLatch closedLatch = new CountDownLatch(1);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost")));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .with(new HttpClientOptions().setKeepAliveTimeout(1))
@@ -321,7 +326,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
         req.response().end();
       });
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost")));
     FakeLoadBalancer lb = new FakeLoadBalancer();
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
@@ -329,15 +334,16 @@ public class ResolvingHttpClientTest extends VertxTestBase {
       .withAddressResolver(resolver)
       .withLoadBalancer(lb)
       .build();
-    awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
-      .send()
-      .expecting(HttpResponseExpectation.SC_OK)
-      .compose(HttpClientResponse::body)
-    ));
-    FakeLoadBalancer.FakeLoadBalancerMetrics<?> endpoint = (FakeLoadBalancer.FakeLoadBalancerMetrics<?>) ((EndpointNode) lb.endpoints().get(0)).metrics();
+    client.request(new RequestOptions().setServer(new FakeAddress("example.com")))
+      .compose(req -> req
+        .send()
+        .expecting(HttpResponseExpectation.SC_OK)
+        .compose(HttpClientResponse::body)
+      ).await();
+    FakeLoadBalancer.FakeLoadBalancerMetrics<?> endpoint = (FakeLoadBalancer.FakeLoadBalancerMetrics<?>) ((ServerEndpoint) lb.endpoints().get(0)).metrics();
     FakeLoadBalancer.FakeMetric metric = endpoint.metrics2().get(0);
     assertTrue(metric.requestEnd() - metric.requestBegin() >= 0);
-    assertTrue(metric.responseBegin() - metric.requestEnd() > 500);
+    assertTrue(metric.responseBegin() - metric.requestEnd() >= 500);
     assertTrue(metric.responseEnd() - metric.responseBegin() >= 0);
   }
 
@@ -348,7 +354,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     requestHandler = (idx, req) -> {
       count.incrementAndGet();
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     FakeLoadBalancer lb = new FakeLoadBalancer();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost")));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
@@ -441,7 +447,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     startServers(1);
     AtomicBoolean mode = new AtomicBoolean();
     requestHandler = (idx, req) -> handler.accept(mode.get(), req);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost")));
     FakeLoadBalancer lb = new FakeLoadBalancer();
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
@@ -483,7 +489,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     requestHandler = (idx, req) -> {
       req.response().end("" + idx);
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
     SocketAddress addr2 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost");
     resolver.registerAddress("example.com", Arrays.asList(addr1));
@@ -506,20 +512,19 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     } catch (Throwable e) {
       assertTrue(e.getMessage().startsWith("Cannot resolve address"));
     }
-    assertEquals("0", res);
   }
 
   @Test
-  public void testTimeExpiration() throws Exception {
-    startServers(1);
+  public void testImmediateInvalidation() throws Exception {
+    startServers(2);
     requestHandler = (idx, req) -> {
       req.response().end("" + idx);
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
-    resolver.registerAddress("example.com", Arrays.asList(addr1));
+    SocketAddress addr2 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost");
+    FakeRegistration registration1 = resolver.registerAddress("example.com", List.of(addr1));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
-      .with(new HttpClientOptions().setKeepAliveTimeout(1))
       .withAddressResolver(resolver)
       .build();
     String res = awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
@@ -528,7 +533,70 @@ public class ResolvingHttpClientTest extends VertxTestBase {
       .compose(HttpClientResponse::body)
     )).toString();
     assertEquals("0", res);
-    waitUntil(() -> resolver.endpoints("example.com") == null);
+    assertNotNull(registration1.state());
+    FakeRegistration registration2 = resolver.registerAddress("example.com", List.of(addr2));
+    res = awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
+      .send()
+      .expecting(HttpResponseExpectation.SC_OK)
+      .compose(HttpClientResponse::body)
+    )).toString();
+    assertEquals("1", res);
+    assertNotNull(registration2.state());
+    assertNotSame(registration1.state(), registration2.state());
+  }
+
+  @Test
+  public void testRebuild() throws Exception {
+    startServers(2);
+    requestHandler = (idx, req) -> {
+      req.response().end("" + idx);
+    };
+    FakeAddressResolver resolver = new FakeAddressResolver();
+    SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
+    SocketAddress addr2 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost");
+    FakeRegistration registration = resolver.registerAddress("example.com", List.of(addr1));
+    HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
+      .withAddressResolver(resolver)
+      .build();
+    for (int i = 0;i < 5;i++) {
+      String res = awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
+        .send()
+        .expecting(HttpResponseExpectation.SC_OK)
+        .compose(HttpClientResponse::body)
+      )).toString();
+      assertEquals("0", res);
+    }
+    registration.update(List.of(addr2));
+    for (int i = 0;i < 5;i++) {
+      String res = awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
+        .send()
+        .expecting(HttpResponseExpectation.SC_OK)
+        .compose(HttpClientResponse::body)
+      )).toString();
+      assertEquals("1", res);
+    }
+  }
+
+  @Test
+  public void testTimeExpiration() throws Exception {
+    startServers(1);
+    requestHandler = (idx, req) -> {
+      req.response().end("" + idx);
+    };
+    FakeAddressResolver resolver = new FakeAddressResolver();
+    SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
+    FakeRegistration registration = resolver.registerAddress("example.com", Arrays.asList(addr1));
+    HttpClientInternal client = ((HttpClientBuilderInternal) vertx.httpClientBuilder())
+      .withAddressResolver(resolver)
+      .resolverIdleTimeout(Duration.ofSeconds(1))
+      .build();
+    String res = awaitFuture(client.request(new RequestOptions().setServer(new FakeAddress("example.com"))).compose(req -> req
+      .send()
+      .expecting(HttpResponseExpectation.SC_OK)
+      .compose(HttpClientResponse::body)
+    )).toString();
+    assertEquals("0", res);
+    assertWaitUntil(() -> registration.endpoints() == null);
   }
 
   @Test
@@ -537,9 +605,9 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     requestHandler = (idx, req) -> {
       req.response().end("" + idx);
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
-    resolver.registerAddress("example.com", Arrays.asList(addr1));
+    FakeRegistration registration = resolver.registerAddress("example.com", Arrays.asList(addr1));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .with(new HttpClientOptions().setKeepAliveTimeout(2))
       .withAddressResolver(resolver)
@@ -554,8 +622,8 @@ public class ResolvingHttpClientTest extends VertxTestBase {
       assertEquals("0", res);
       Thread.sleep(200);
     }
-    assertNotNull(resolver.endpoints("example.com"));
-    waitUntil(() -> resolver.endpoints("example.com") == null);
+    assertNotNull(registration.endpoints());
+    waitUntil(() -> registration.endpoints() == null);
   }
 
   @Test
@@ -593,7 +661,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     requestHandler = (idx, req) -> {
       req.response().end("" + idx);
     };
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     SocketAddress addr1 = SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost");
     resolver.registerAddress("example.com", Arrays.asList(addr1));
     HttpClient client = vertx.httpClientBuilder()
@@ -625,7 +693,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     waitFor(numClients * numRequests);
     startServers(numServers);
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     List<SocketAddress> servers = IntStream
       .range(0, numServers)
       .mapToObj(idx -> SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + idx, "localhost"))
@@ -667,7 +735,7 @@ public class ResolvingHttpClientTest extends VertxTestBase {
     int numServers = 2;
     startServers(numServers);
     requestHandler = (idx, req) -> req.response().end("server-" + idx);
-    FakeEndpointResolver resolver = new FakeEndpointResolver();
+    FakeAddressResolver resolver = new FakeAddressResolver();
     resolver.registerAddress("example.com", Arrays.asList(SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT, "localhost"), SocketAddress.inetSocketAddress(HttpTestBase.DEFAULT_HTTP_PORT + 1, "localhost")));
     HttpClientInternal client = (HttpClientInternal) vertx.httpClientBuilder()
       .withLoadBalancer(endpoints -> () -> endpoints.size() + 1)
